
[CHG] The permission constants are now constants of the WdModule class.

[CHG] Renamed WdModule::T_ROOT as WdModule::T_PATH.

[CHG] Changed the name scheme of the constructed config cache files.

[CHG] Better support for sub operations.

[CHG] Renamed WdModule::isInstalled() as WdModule::is_installed() and
WdDatabaseTable::IsInstalled() as WdDatabaseTable::is_installed().

[DEL] WdObject: The `__get_them_all` method is deprecated, override the `__defer_get` method
instead.




2010-11-08 # 0.8.0

[NEW] Hooks can now be used to add methods (and getters) to instances of the FObject class.

[NEW] The wd_array_insert() function can be used to insert values after or before a specified key.

[NEW] The ".json" or ".xml" extensions can be appened to RESTful operations URL for a response in
"application/json" or "application/xml" format.

[NEW] WdModule: The 'control_operation' callback now throws WdHTTPException exceptions when control
fail on CONTROL_AUTHENTICATION, CONTROL_PERMISSION, CONTROL_ENTRY and CONTROL_OWNERSHIP.

[NEW] Because isset() or get_object_vars() don't work with virtual properties, the `has_property`
of the FObject class can be used to know if an object has a property even if the property is NULL.

[NEW] The configuration system has been rewrote :

The configuration process is now handled through the WdConfig class instead of the WdCore class.

The 'autoconfig' feature is now deprecated. Classes can use the `__static_construct()` method to
read configuration on loading.

In order to be able to use the `__static_construct()` method, which is only called by the WdCore's
autoloader, the WdLocale, WdDebug and WdException classes are no longer loaded by the WdCore
include file, thus, they can only be available *after* the `__construct()` method returns.

[NEW] Module models can now use models from other modules, finally introducing a form of model
inheritance, or at least reusing. Instead of defining the tags to create the model to use, one can